Revision history for Perl extension WebService::Solr.

0.10  XXX
    - Add spellcheck() convenience method to Response object

0.09  Fri Dec 04 2009
    - Return undef in pager/pageset special case when we explicitly
      return 0 rows
    - Add rollback() from Solr 1.4
    - Add generic delete() from Solr 1.4
    - Update docs to match Solr 1.4 options
    - Fix ping() to check only the HTTP status

0.08  Wed Oct 14 2009
    - Allow scalar ref value in WebService::Solr::Query, which works like
      SQL::Abstract (literal query)
    - Fix status_message and status_code in Response
    - Add Data::Pageset capabilities to Response (Jos Boumans)
    - Ensure compatibility with older versions of Encode by making sure we
      pass a string to encode() (Gert Brinkmann)

0.07  Fri Jun 26 2009
    - Trap JSON::XS exceptions (Jos Boumans)
    - Provide an abstract query generator: WebService::Solr::Query
      (Jos Boumans, Brian Cassidy)

0.06  Thu May 07 2009
    - Add auto_suggest to hit the new Solr 1.4 /autoSuggest API (RT #45798)
    - Refactor a basic GET request into its own public
      method (generic_solr_request)

0.05  Mon Apr 13 2009
    - Confess upon HTTP error (Leon Brocard)
    - Send UTF-8 requests to keep new LWP happy (Leon Brocard)

0.04  Mon Mar 02 2009
    - add make_immutable to Solr.pm
    - be paranoid about XML escaping (Gert Brinkmann)

0.03  Thu Jan 15 2009
    - fix typo (Thanks cog)
    - pod fixes
    - try to work around old LWP versions when setting HTTP headers
    - require URI >= 1.28
    - require XML::Generator >= 0.94

0.02  Thu Oct 09 2008
    - fix pager creation, missing prereq
    - add a simple facet_counts() shortcut method

0.01  Tue Oct 07 2008
    - original version;