@@ -2,6 +2,7 @@ Revision history for Perl extension WebService::Solr.
 
 0.10  XXX
     - Add spellcheck() convenience method to Response object
+    - Fix exception when response contained no documents
 
 0.09  Fri Dec 04 2009
     - Return undef in pager/pageset special case when we explicitly
